; ModuleID = '/home/carl/AnghaBench/tig/src/extr_pager.c_pager_get_column_data.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_pager.c_pager_get_column_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i32 }
%struct.line = type { i32 }
%struct.view_column_data = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pager_get_column_data(%struct.view* %0, %struct.line* %1, %struct.view_column_data* %2) #0 {
  %4 = alloca %struct.view*, align 8
  %5 = alloca %struct.line*, align 8
  %6 = alloca %struct.view_column_data*, align 8
  store %struct.view* %0, %struct.view** %4, align 8
  store %struct.line* %1, %struct.line** %5, align 8
  store %struct.view_column_data* %2, %struct.view_column_data** %6, align 8
  %7 = load %struct.line*, %struct.line** %5, align 8
  %8 = call i32 @box_text(%struct.line* %7)
  %9 = load %struct.view_column_data*, %struct.view_column_data** %6, align 8
  %10 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.line*, %struct.line** %5, align 8
  %12 = getelementptr inbounds %struct.line, %struct.line* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.view_column_data*, %struct.view_column_data** %6, align 8
  %15 = getelementptr inbounds %struct.view_column_data, %struct.view_column_data* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret i32 1
}

declare dso_local i32 @box_text(%struct.line*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
